force-app/main/default/objects/accessnow__ACNW_Setup_Audit_Log__c/fields/accessnow__Activity__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Activity__c</fullName>
    <label>Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>