force-app/main/default/objects/accessnow__ACNW_Setup_Audit_Log__c/fields/accessnow__Delegate_User__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Delegate_User__c</fullName>
    <label>Delgate User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>