force-app/main/default/objects/accessnow__ACNW_Setup_Audit_Log__c/fields/accessnow__Logged_In_As__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Logged_In_As__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged In As</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Setup_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>