force-app/main/default/objects/accessnow__ACNW_Setup_Audit_Log__c/fields/accessnow__Section__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Section__c</fullName>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>