force-app/main/default/objects/accessnow__ACNW_Setup_Audit_Log__c/listViews/accessnow__All.listView-meta.xml
<ListView>
    <fullName>accessnow__All</fullName>
    <columns>NAME</columns>
    <columns>accessnow__Activity__c</columns>
    <columns>accessnow__Date__c</columns>
    <columns>accessnow__Delegate_User__c</columns>
    <columns>accessnow__Request__c</columns>
    <columns>accessnow__Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>